# xfads

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
src/bfs/: __init__.py  approximation.py  distribution.py  dynamics.py  encoder.py  nn.py  smoother.py  smoothing.py  util.py  vi.py
src/jaxfads/: __init__.py  constraints.py  core.py  distributions.py  encoders.py  smoother.py  trainer.py  vi.py
src/xfads/: __init__.py  constraints.py  core.py  distribution.py  distributions.py  dynamics.py  encoder.py  encoders.py  helper.py  ilqr.py  nn.py  observations.py  smoother.py  smoothing.py  spec.py  specs.py  trainer.py  util.py  vi.py
tests/: conftest.py  test_distribution.py  test_dynamics.py  test_ilqr.py  test_nn.py  test_smoother.py  test_smoothing.py  test_trainer.py  test_util.py  test_vi.py
