[project]
name = "xfads"
version = "0.1.0"
description = "eXponential FAmily Dynamical System"
authors = [
    { name = "yuanz", email = "yuanz271@gmail.com" }
]
dependencies = [
    "jax>=0.4.13",
    "tqdm>=4.66.1",
    "equinox>=0.10.4",
    "jaxtyping>=0.2.19",
    "optax>=0.1.7",
    "chex>=0.1.7",
    "tensorflow-probability>=0.21.0",
    "jaxlib>=0.4.13",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "tensorflow>=2.13.1",
    "scikit-learn>=1.4.1.post1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "ruff>=0.1.14",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
ignore = ["E501"]
