[project]
name = "xfads"
version = "0.1.0"
description = "eXponential FAmily Dynamical System"
authors = [{ name = "yuanz", email = "yuanz271@gmail.com" }]
dependencies = [
    "jaxtyping>=0.2.19",
    "optax>=0.1.7",
    "chex>=0.1.7",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "scikit-learn>=1.4.1",
    "jax",
    "equinox>=0.11.11",
    "tensorflow-probability>=0.25.0",
    "orbax-checkpoint>=0.11.5",
    "rich>=14.0.0",
    "gearax",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
lint.ignore = ["E501", "F722"]

[tool.uv.sources]
gearax = { path = "gearax", editable = true }

[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
