[project]
name = "xfads"
version = "0.1.0"
description = "eXponential FAmily Dynamical System"
authors = [{ name = "yuanz", email = "yuanz271@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "optax>=0.1.7",
    "chex>=0.1.7",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "scikit-learn>=1.4.1",
    "jax<0.7",
    "equinox>=0.11.11",
    "tensorflow-probability>=0.25.0",
    "orbax-checkpoint>=0.11.5",
    "rich>=14.0.0",
    "gearax",
]

[project.urls]
Repository = "https://github.com/yuanz271/xfads"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
lint.ignore = ["E501", "F722"]

[tool.uv.sources]
gearax = { path = "gearax", editable = true }

[dependency-groups]
dev = ["matplotlib>=3.10.1", "pytest>=8.3.4", "ruff>=0.9.4"]
